<resources>
    <!-- Common -->
    <string name="loading">Loading..</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="cancel">Cancel</string>
    <string name="details">Details</string>
    <string name="clear">Clear</string>
    <string name="retry">RETRY</string>

    <!-- Fragment Home -->
    <string name="app_name">Nora Pub</string>
    <string name="title_home">Nora Pub</string>
    <string name="title_craft">Craft</string>
    <string name="title_beer_on_tap">Beer on tap</string>
    <string name="title_cans_in_fridge">Cans in fridge</string>
    <string name="title_profile">Profile</string>
    <string name="error_message">..we lost you :(</string>
    <string name="error_message_no_internet">Check internet connection</string>
    <string name="menu">MENU</string>
    <string name="menu_lowercase">Menu</string>
    <string name="untappd">NORA ON UNTAPPD</string>
    <string name="book_a_table">BOOK A TABLE</string>
    <string name="about">ABOUT</string>
    <string name="doo_name">Blumenstreet DOO</string>
    <string name="city">Podgorica, Montenegro</string>
    <string name="address">Central Point, Building 3 </string>
    <string name="phone"><u>(+382) 067 884076</u></string>
    <string name="get_directions"><u>Get directions</u></string>
    <string name="instagram"><u>Follow us on Instagram</u></string>
    <string name="new_arrival">NEW ARRIVAL</string>
    <string name="open_hours">Open everyday 4pm - 12am</string>

    <!-- URLs -->
    <string name="url_nora_on_untappd">https://untp.beer/WV9Y8</string>
    <string name="url_nora_on_instagram">https://www.instagram.com/norapub.pg/</string>
    <string name="url_nora_on_google_maps">https://maps.app.goo.gl/M55WD4mBf34T6ffC6</string>

    <!-- Languages -->
    <string name="language_montenegrin">Crnogorski/Srpski</string>
    <string name="language_english">English</string>
    <string name="language_russian">Русский</string>

    <!-- Fragment Craft -->
    <string name="by_brewery">by %s</string>
    <string name="ABV">%.1f%% ABV</string>
    <string name="IBU">%d IBU</string>
    <string name="volume">%d ml</string>
    <string name="craft_search_helper_text">Search name or style</string>
    <string name="filter_fragment_title">Filter settings</string>
    <string name="no_items_found">Nothing found</string>
    <string name="filters">Filters</string>


    <!-- Fragment FilterCraft -->
    <string name="apply">APPLY</string>
    <string name="select_country">Select country</string>
    <string name="abv_label">ABV, %</string>
    <string name="ibu_label">IBU</string>

    <!-- Default countries list -->
    <string-array name="country_list">
        <item>USA</item>
        <item>Germany</item>
        <item>Serbia</item>
        <item>Belgium</item>
        <item>Russia</item>
        <item>Czech Republic</item>
        <item>England</item>
    </string-array>

    <!-- Fragment Profile -->
    <string name="newbie">Newbie</string>
    <string name="edit_name">Edit name</string>
    <string name="craft_beer_enthusiast">Craft Beer Enthusiast</string>
    <string name="choose_avatar">Choose avatar</string>
    <string name="from_gallery">Choose from gallery</string>
    <string name="take_photo">Take photo</string>

    <string name="notification_settings">Notification settings</string>
    <string name="notifications_hint">Get notified about news and events?</string>
    <string name="latest_news">Latest news</string>
    <string name="events">Upcoming events</string>
    <string name="notifications_permission_denied">Permission denied. Notifications will not work.</string>
    <string name="camera_permission_denied">Permission denied. Camera permission required.</string>
    <string name="subscribed_news">Subscribed to news!</string>
    <string name="error_subscribe_news">Error subscribing to news</string>
    <string name="subscribed_events">Subscribed to events!</string>
    <string name="error_subscribe_events">Error subscribing to events</string>

    <string name="notification_default_title">Nora Notification</string>
    <string name="notification_default_body">You have a new message</string>

    <string name="my_favorite_craft_beer">Favorite craft beer:</string>
    <string name="add_to_fav">Add to favorites</string>
    <string name="no_favorites_message">Favorites list is empty</string>
    <string name="share">Share</string>
    <string name="add_note_hint">Add a note</string>
    <string name="edit_note_hint">Your note</string>
    <string name="beer_removed">Beer was removed from favorites</string>
    <string name="reset">RESET</string>
    <string name="error_with_beer_details">An error occurred while loading beer data.</string>

    <!-- Fragment Reservation -->
    <string name="reservation_title">Reservation</string>
    <string name="select_date">Select date</string>
    <string name="select_time">Select time</string>
    <string name="guest_count">Number of guests</string>
    <string name="confirm_reservation">Confirm reservation</string>
    <string name="please_select_date">Please select date</string>
    <string name="please_select_time">Please select time</string>
    <string name="invalid_guest_count">You can book for 1 to 10 guests.\nFor larger groups, please contact us directly</string>
    <string name="loading_reservation">Processing reservation…</string>
    <string name="reservation_success">Reservation successful!</string>
    <string name="date_in_past">Date cannot be in the past</string>
    <string name="time_in_past">Time cannot be in the past</string>
    <string name="time_out_of_range">Time must be within the Nora\'s working hours (16:00–23:30)</string>
    <string name="no_table_available">Unfortunately, there are no available tables at the selected date and time</string>
    <string name="profile_photo">Profile photo</string>

    <!-- Fragment News -->
    <string name="see_all_news">See all news</string>
    <string name="all_news">All news</string>

</resources>