<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    tools:context=".ui.home.HomeFragment">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.04" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.96" />

    <Spinner
        android:id="@+id/language_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:entries="@array/languages"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_events"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.4"
        android:clipToPadding="false"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/vertical_margin_small"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/language_spinner" />

    <Button
        android:id="@+id/button_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rounded_12"
        android:text="@string/menu"
        android:layout_marginTop="@dimen/vertical_margin_large"
        android:layout_marginStart="@dimen/horizontal_margin_small"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/rv_events"
        app:layout_constraintWidth_percent="0.28" />

    <Button
        android:id="@+id/button_untappd"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rounded_12"
        android:text="@string/untappd"
        android:layout_marginTop="@dimen/vertical_margin_large"
        android:layout_marginEnd="@dimen/horizontal_margin_small"
        app:layout_constraintTop_toBottomOf="@id/rv_events"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintWidth_percent="0.56" />

    <Button
        android:id="@+id/button_book_a_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rounded_12"
        android:text="@string/book_a_table"
        android:layout_marginStart="@dimen/horizontal_margin_small"
        android:layout_marginTop="@dimen/vertical_margin_medium"
        app:layout_constraintTop_toBottomOf="@id/button_menu"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintWidth_percent="0.56" />

    <Button
        android:id="@+id/button_about"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rounded_12"
        android:text="@string/about"
        android:layout_marginTop="@dimen/vertical_margin_medium"
        android:layout_marginEnd="@dimen/horizontal_margin_small"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintTop_toBottomOf="@id/button_menu"
        app:layout_constraintWidth_percent="0.28" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_news"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.2"
        android:clipToPadding="false"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/vertical_margin_large"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/button_book_a_table" />

    <!-- About -->
    <TextView
        android:id="@+id/doo_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_large"
        android:textAlignment="textStart"
        android:textSize="20sp"
        android:textStyle="bold"
        android:text="@string/doo_name"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/rv_news" />
    <TextView
        android:id="@+id/phone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_small"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:text="@string/phone"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/doo_name" />

    <TextView
        android:id="@+id/city"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_small"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:text="@string/city"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/phone" />

    <TextView
        android:id="@+id/address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_small"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:text="@string/address"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/city" />

    <TextView
        android:id="@+id/get_directions"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_small"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:text="@string/get_directions"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/address" />

    <TextView
        android:id="@+id/instagram"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_small"
        android:textAlignment="textStart"
        android:textSize="16sp"
        android:text="@string/instagram"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="90dp"
        app:layout_constraintEnd_toEndOf="@id/right_guideline"
        app:layout_constraintStart_toStartOf="@id/left_guideline"
        app:layout_constraintTop_toBottomOf="@id/get_directions" />
</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>